src/static/root/lp.css
:root {
    --main-bg-color: #ffffff;
    --main-contrast-color: #0284c7;
    --effect-outstandig-box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
    /*--main-contrast-color: cornflowerblue;*/
  }
  .lp_app_menu {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    margin-top: 65px;
    left: 0;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 7px;
  }
  :not(:defined) {
    visibility: hidden;
  }
  .lp_module_title{
    /*background: linear-gradient(274deg, rgba(2,0,36,1) 0%, rgba(255,255,255,1) 0%, var(--main-contrast-color) 100%);*/
    background-color: var(--main-contrast-color);
    border-color: transparent;
    border-style: none;
    text-align: left;
    color:white;
    padding: 7px;
    border-radius: 4px;
    min-height: 38px;
    max-height: 38px;

  }
  .lp_module_fixed_bar{
    position:fixed;
    top:65;
    z-index: 1;
    min-width: 268px;
    box-shadow: var(--effect-outstandig-box-shadow);
  }        
  .lp_button {
    height: 40px;
    background-color: white;
    border-radius: 20px;
    border: 1px solid #c7c7c7;
    box-shadow: rgba(45, 35, 66, 0.4) 0 1px 0px,rgba(45, 35, 66, 0.3) 0 0px 1px 0px,#D7D7E7 0 -1px 0 inset;
    box-sizing: border-box;
    color: #919191;
    cursor: pointer;
    display: inline-block;
    font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
    font-size: large;
    font-weight: 400;
    line-height: 1.15385;
    margin: 0;
    margin-bottom: 8px;
    outline: none;
    padding: 8px .8em;
    position: relative;
    text-align: center;
    text-decoration: none;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    vertical-align: baseline;
    white-space: nowrap;
  }   
  .lp_button:active {
    box-shadow: #D7D7E7 0 1px 0px inset;
    transform: translateY(0px);
  }                  
  .lp_container {
      border-style: solid;
      border-width: 1px;
      border-color: #dee2e6;
      border-top-style: none;
      border-bottom-left-radius: 12px;
      border-bottom-right-radius: 12px;
      padding: 10px;
      box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2)
  }
  .lp_contrast_container {
      background-color: whitesmoke;
      border-style: solid;
      border-width: 1px;
      border-color: #dee2e6;
      border-bottom-left-radius: 12px;
      border-bottom-right-radius: 12px;
      padding: 5px;
      border-top-color: #8ec0d9;
      /*border-top-color: #c5bdf9;*/
      border-top-width: 3px;
  }
  .lp_register_container_body {
      margin-top: 8px;
      margin-left: 7px;
  }
  .lp_bread_crumbs_container{
    margin-bottom: 15px;
  }
  .lp_input{
    /*background-color: #fdfaeb;*/
    /*background-color: #f4f5ff;*/
  }
  .center {
    text-align:center;
    width:100%;
  }
  .center:first-child {
      margin:auto;
      text-align:left;
  }

